# GzScenic

./: .gitignore  flake.nix  gzscenic.nix  overlay.nix  pyproject.toml  shell.nix
gzscenic/: gzscenic.py
nix/: shell.nix
nix/pkgs/: default.nix
nix/pkgs/gzscenic/: default.nix
nix/pkgs/pywavefront/: default.nix
nix/pkgs/scenic/: default.nix
