[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gzscenic"
version = '0.1dev'
dependencies = [
  'pytest',
  'pexpect',
  'attrs',
  'pyyaml',
  'ruamel.yaml',
  'matplotlib',
  'psutil',
  'wget',
  'pycollada',
  'pywavefront',
  'numpy',
  'scenic',
  'requests',
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD-3-Clause" }

[project.scripts]
gzscenic = "gzscenic.gzscenic:main"

[project.urls]
Repository = 'https://github.com/squaresLab/GzScenic'

[tool.setuptools.packages]
find = {}
